# grpc-climate

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  MY_README.md  README.md  __commands.yaml  client.py  fly.toml  index.html  main.py  requirements.txt  test.py  tmax_pb2.py  tmax_pb2_grpc.py
cmake/: CMakeLists.txt
docs/: Dockerfile  README.md  fly.toml  index.html
example_python/: .dockerignore  README.md  __commands.yaml  fly.toml  requirements.txt  server.py  unary.proto
proto/: CMakeLists.txt
proto/myproto/: tmax.proto
python_client/: client.py  tmax_pb2.py  tmax_pb2.pyi  tmax_pb2_grpc.py
scripts/: README.md  dowload_data.py  dowload_data_historical.py  dowload_data_post_ssp2_4_5.py  download_data_post_all.py  parameters.py  visualize.ipynb  visualize.py
server/: CMakeLists.txt
server/src/: main.cpp  netcdf_tools.cpp  netcdf_tools.h  tmax_service.cpp  tmax_service.h
server/tests/: test_netcdf_tools.cpp
